syntax = "proto3";

package protos;

// 여기 패키지를 이렇게 하면 폴더가 생긴다. 일단 아래 처럼 간단히 하자.
//option go_package = "github.com/seoyhaein/golang-study/protos/jobs";

option go_package = "protos";


message JobsRequest {
  int64 job_req_id = 1; // client id 로 할지 고민.
  string input_message = 2;
}

message JobsResponse {
  int64 job_res_id = 1; // client id 로 할지 고민.

  enum Status {
    IN_PROGRESS = 0;
    CANCELED = 1;
    FAILED = 2;
    COMPLETED = 3;

    TIME_OUT = 4; // 일단 넣어두기는 함. 필요 없을 것 같다.
    FINISHED = 5; // 최종 전송이 되었는가 안되었는가
  }

  /*
    // protocol buffer style guide 에 나온 enum 작성법
    // type nmae 은 CamelCase value name은 CAPITALS_WITH_UNDERSCORES
    // 접두사를 사용 선호, zero value 는 UNSPECIFIED 접미사 사용 
    // UNSPECIFIED 사용하는 이유 참고 : https://stackoverflow.com/questions/48833349/whats-the-purpose-of-having-default-enum-value-as-unspecified-in-google-proto
    enum Status {
      STATUS_UNSPECIFIED = 0;
    
      STATUS_IN_PROGRESS = 1;
      STATUS_ICANCELED = 2;
      STATUS_IFAILED = 3;
      STATUS_ICOMPLETED = 4;

      STATUS_ITIME_OUT = 5; 
      STATUS_IFINISHED = 6; 
    }
  */

  JobsResponse.Status status = 2;
  string output_message = 3;
}

service LongLivedJobCall {
  rpc Subscribe(JobsRequest) returns (stream JobsResponse) {}
  rpc Unsubscribe(JobsRequest) returns (JobsResponse) {}
}


